# aiopquic

./: .gitignore  .gitmodules  .python-version  AIOMOQT_PIVOT_PLAN.md  CHANGELOG.md  DATAFLOW.md  LICENSE  PERFORMANCE.md  PLAN.md  README.md  advance_pins.sh  bootstrap_python.sh  build.sh  build_picoquic.sh  build_picoquic_tests.sh  pyproject.toml  setup.py  update_submodules.sh
.github/actions/setup-aiopquic/: action.yml
.github/workflows/: cicd.yml  omoq-mirror-sync.yml  release.yml  wheels-dry-run.yml
issues/: sockloop-wakeup-send-gap.md
patches/: 0001-picoquic-pr-2097-do-not-reschedule-closed-cnx.patch  0003-picoquic-callback-stream-released.patch  0003-stream-released-callback.patch  0004-add-mark-active-stream-v2.patch  0004-h3zero-forward-stream-released-to-path-callback.patch  0004-picoquic-preserve-app-stream-ctx-on-null.patch  picoquic-alpn-null-guard.patch
src/aiopquic/: __init__.py  _build_info.py  buffer.py  exceptions.py  streamchain.py  versions.py
src/aiopquic/_binding/: _buffer.pyx  _streamchain.pyx  _transport.pyx  picoquic.pxd  spsc_ring.pxd
src/aiopquic/_binding/c/: callback.h  h3wt_callback.h  spsc_ring.h  stream_buf.h  stream_ctx.h
src/aiopquic/asyncio/: __init__.py  client.py  dispatch.py  protocol.py  server.py  webtransport.py
src/aiopquic/h3/: __init__.py  connection.py  events.py  exceptions.py
src/aiopquic/quic/: __init__.py  configuration.py  connection.py  events.py
tests/: test_asyncio.py  test_baton_pattern.py  test_buffer.py  test_h3.py  test_interop.py  test_loopback.py  test_native_picoquic.py  test_spsc_ring.py  test_transport.py  test_vi64.py  test_webtransport.py
tests/bench/: RESULTS.md  _helpers.py  bench_backpressure.py  bench_baselines_highlevel.py  bench_baselines_lowlevel.py  bench_datagram.py  bench_handshake.py  bench_latency.py  bench_latency_floor.py  bench_ring.py  bench_small_object_rate.py  bench_split_writes_stress.py  bench_stream_object_stress.py  bench_throughput.py  bench_throughput_bidirectional.py  bench_throughput_parallel.py  bench_throughput_pullmodel.py  bench_throughput_sustained.py  bench_throughput_sustained_verify.py  bench_wt_split_writes_stress.py  conftest.py  test_rx_fc_counters.py
tests/bench/sim_link/: README.md  build.sh  sim_link_bench.c
tests/interop/: README.md  __init__.py  conftest.py  test_aioquic.py  test_dispatch.py  test_ngtcp2.py  test_picoquicdemo.py  test_qh3.py  test_s2n_quic.py
tests/interop/peers/: aioquic_echo.py  qh3_echo.py
