[build-system]
requires = ["setuptools>=75.0", "cython>=3.2.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aiopquic"
version = "0.1.0"
description = "High-performance QUIC/HTTP3 library — picoquic-backed, qh3-compatible asyncio API"
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
authors = [
    { name = "Giovanni Marzot", email = "gmarzot@marzresearch.net" }
]
dependencies = [
    "certifi",
]

[project.urls]
Homepage = "https://github.com/gmarzot/aiopquic"
Repository = "https://github.com/gmarzot/aiopquic.git"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-benchmark",
    "pytest-cov",
    "pytest-xdist",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# Benches are opt-in: run them with `pytest tests/bench`.
addopts = "--ignore=tests/bench"
python_files = ["test_*.py", "bench_*.py"]
markers = [
    "interop: tests against public QUIC/H3 endpoints (needs network)",
    "bench: microbenchmarks (in tests/bench/, opt-in via path)",
]
